--- a/index.html
+++ b/index.html
@@ -20,26 +20,28 @@
 
 <body>
   <!-- Header -->
-  <header class="border-header">
+  <header class="header">
 
-    <div class="container navigation">
+    <div class="container header__container">
       <nav class="navigation">
-        <a class="logo link" lang="en" href="./index.html">Web<span class="logo-header">Studio</span></a>
-        <ul class="site-nav list navigation">
-          <li class="site-nav-item"><a href="./index.html" class="nav-link link current">Студія</a></li>
-          <li class="site-nav-item"><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
-          <li class="site-nav-item"><a href="#" class="nav-link link">Контакти</a></li>
+        <a class="logo link" lang="en" href="./index.html">Web<span
+            class="logo__part logo__part--header">Studio</span></a>
+        <ul class=" site-nav list navigation__site-nav">
+          <li class="site-nav__item"><a href="./index.html"
+              class="site-nav__link link site-nav__link--current">Студія</a></li>
+          <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link link">Портфоліо</a></li>
+          <li class="site-nav__item"><a href="#" class="site-nav__link link">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contacts list">
-        <li class="contacts-item">
-          <a href="mailto:info@devstudio.com" class="contacts-link link"><svg class="contacts-icon" width="16"
+      <ul class="contacts list navigation__contacts">
+        <li class="contacts__item">
+          <a href="mailto:info@devstudio.com" class="contacts__link link"><svg class="contacts__icon" width="16"
               height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a>
         </li>
-        <li class="contacts-item">
-          <a href="tel:+380961111111" class="contacts-link link"><svg class="contacts-icon" width="10" height="16">
+        <li class="contacts__item">
+          <a href="tel:+380961111111" class="contacts__link link"><svg class="contacts__icon" width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a>
         </li>
@@ -50,69 +52,69 @@
   <main>
     <!-- Hero -->
     <section class="hero">
-      <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-      <button class="hero-button" data-modal-open type="button">Замовити послугу</button>
+      <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+      <button class="hero__button" data-modal-open type="button">Замовити послугу</button>
     </section>
     <!-- Features -->
     <section class="section">
       <div class="container">
         <h2 class="visually-hidden">Особливості</h2>
-        <ul class="feauters-list list">
-          <li class="feauters-item">
-            <div class="feauters-icon">
+        <ul class="feauters list">
+          <li class="feauters__item">
+            <div class="feauters__icon">
               <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
-            <h3 class="feauters-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="feauters-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <h3 class="feauters__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="feauters__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
-          <li class="feauters-item">
-            <div class="feauters-icon">
+          <li class="feauters__item">
+            <div class="feauters__icon">
               <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
-            <h3 class="feauters-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="feauters-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="feauters__title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="feauters__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
-          <li class="feauters-item">
-            <div class="feauters-icon">
+          <li class="feauters__item">
+            <div class="feauters__icon">
               <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
-            <h3 class="feauters-title">ПЛАНУВАННЯ</h3>
-            <p class="feauters-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="feauters__title">ПЛАНУВАННЯ</h3>
+            <p class="feauters__text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
-          <li class="feauters-item">
-            <div class="feauters-icon">
+          <li class="feauters__item">
+            <div class="feauters__icon">
               <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
-            <h3 class="feauters-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="feauters-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="feauters__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="feauters__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </div>
     </section>
     <!-- Occupation -->
-    <section class="section opcupation-padding">
+    <section class="occupation section">
       <div class="container">
-        <h2 class="section-title title-mb">Чим ми займаємося</h2>
+        <h2 class="occupation__title section__title">Чим ми займаємося</h2>
         <ul class="occupation-list list">
-          <li class="occupation-item">
+          <li class="occupation-list__item">
             <img src="./images/occupation-1.jpg" alt="Десктопні додатки" width="370" height="294">
-            <p class="occupation-overlay">Десктопні додатки</p>
+            <p class="occupation-list__overlay">Десктопні додатки</p>
           </li>
-          <li class="occupation-item">
+          <li class="occupation-list__item">
             <img src="./images/occupation-2.jpg" alt="Розробка мобільних додатків" width="370" height="294">
-            <p class="occupation-overlay">Мобільні додатки</p>
+            <p class="occupation-list__overlay">Мобільні додатки</p>
           </li>
-          <li class="occupation-item">
+          <li class="occupation-list__item">
             <img src="./images/occupation-3.jpg" alt="Веб дизайн" width="370" height="294">
-            <p class="occupation-overlay">Дизайнерські рішення</p>
+            <p class="occupation-list__overlay">Дизайнерські рішення</p>
           </li>
         </ul>
       </div>
@@ -120,7 +122,7 @@
     <!-- Team -->
     <section class="section team">
       <div class="container">
-        <h2 class="section-title title-mb">Наша команда</h2>
+        <h2 class="section__title">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-list-item">
             <img src="./images/team-member-1.jpg" alt="Фото дизайнера продуктів Ігоря 
@@ -284,7 +286,7 @@
 
     <section class="section clients">
       <div class="container">
-        <h2 class="section-title title-mb">Постійні клієнти</h2>
+        <h2 class="section__title">Постійні клієнти</h2>
         <ul class="clients-list list">
           <li class="clients-item">
             <a href="" class="clients-link">
@@ -337,7 +339,8 @@
   <footer class="footer">
     <div class="container footer-flex">
       <div>
-        <a class="logo link" lang="en" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+        <a class="logo link" lang="en" href="./index.html">Web<span
+            class="logo__part logo__part--footer">Studio</span></a>
         <address class="address">
           <ul class="footer-list list">
             <li class="footer-list-item"><a class="footer-list-adress link" href="https://goo.gl/maps/8Shcnv1b6fzr6zjf9"
