--- a/portfolio.html
+++ b/portfolio.html
@@ -21,28 +21,28 @@
 
 <body>
     <!-- Header  -->
-    <header class="border-header">
+    <header class="header">
 
-        <div class="container navigation">
+        <div class="container header__container">
             <nav class="navigation">
-                <a class="logo link" lang="en" href="./index.html">Web<span class="logo-header">Studio</span></a>
-                <ul class="site-nav list navigation">
-                    <li class="site-nav-item"><a href="./index.html" class="nav-link link">Студія</a></li>
-                    <li class="site-nav-item"><a href="./portfolio.html" class="nav-link link current">Портфоліо</a>
-                    </li>
-                    <li class="site-nav-item"><a href="#" class="nav-link link">Контакти</a></li>
+                <a class="logo link" lang="en" href="./index.html">Web<span
+                        class="logo__part logo__part--header">Studio</span></a>
+                <ul class=" site-nav list navigation__site-nav">
+                    <li class="site-nav__item"><a href="./index.html" class="site-nav__link link">Студія</a></li>
+                    <li class="site-nav__item"><a href="./portfolio.html"
+                            class="site-nav__link link site-nav__link--current">Портфоліо</a></li>
+                    <li class="site-nav__item"><a href="#" class="site-nav__link link">Контакти</a></li>
                 </ul>
             </nav>
-
-            <ul class="contacts list">
-                <li class="contacts-item">
-                    <a href="mailto:info@devstudio.com" class="contacts-link link"><svg class="contacts-icon" width="16"
-                            height="12">
+            <ul class="contacts list navigation__contacts">
+                <li class="contacts__item">
+                    <a href="mailto:info@devstudio.com" class="contacts__link link"><svg class="contacts__icon"
+                            width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a>
                 </li>
-                <li class="contacts-item">
-                    <a href="tel:+380961111111" class="contacts-link link"><svg class="contacts-icon" width="10"
+                <li class="contacts__item">
+                    <a href="tel:+380961111111" class="contacts__link link"><svg class="contacts__icon" width="10"
                             height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11</a>
@@ -216,7 +216,8 @@
     <footer class="footer">
         <div class="container footer-flex">
             <div>
-                <a class="logo link" lang="en" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+                <a class="logo link" lang="en" href="./index.html">Web<span
+                        class="logo__part logo__part--footer">Studio</span></a>
                 <address class="address">
                     <ul class="footer-list list">
                         <li class="footer-list-item"><a class="footer-list-adress link"
